# llm_data_console

./: .env.example  .gitignore  Dockerfile  Dockerfile.cuda  Makefile  README.md  REPORT.md  deployment.md  development.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
app/: analyzer.py  cli.py  data_load.py  main.py  responses.py  run_tests.py  run_validation.py  schema.py  test.py  test_api.py  utils.py
app/core/: config.py
app/models/: base_model.py  local_model.py  model_factory.py  openai_model.py
app/prompts/: loader.py  prompt_config.json
data/: history.json  report.csv  test_questions.csv  validate_answer.json
tests/: conftest.py  test_analyzer.py
tests/fixtures/: mock_responses.json
tests/utils/: compare.py
